[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccs"
description = "Multi-source session browser for Claude Code / Codex / Pi / Opencode (fzf-driven)."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Thomas Jeung" }]
keywords = ["claude-code", "codex", "opencode", "fzf", "session-browser", "cli", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Terminals",
    "Topic :: Utilities",
]
dependencies = []
# __version__ in ccs.py is the single source of truth — hatchling reads it here.
dynamic = ["version"]

[project.scripts]
ccs = "ccs:main"

[project.urls]
Homepage = "https://github.com/tmsjngx0/ccs"
Repository = "https://github.com/tmsjngx0/ccs"
Issues = "https://github.com/tmsjngx0/ccs/issues"
Changelog = "https://github.com/tmsjngx0/ccs/blob/main/CHANGELOG.md"

# Single-module packaging — see ADR-009 in ccs-mgmt: ccs.py stays as a single
# file at repo root (read-and-fork property), but wheel build packs it as the
# top-level `ccs` module so `pipx install` / `uvx` work.
[tool.hatch.version]
path = "ccs.py"

[tool.hatch.build.targets.wheel]
only-include = ["ccs.py"]

[tool.hatch.build.targets.sdist]
only-include = ["ccs.py", "README.md", "CHANGELOG.md", "LICENSE", "pyproject.toml"]
